--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,9 @@ body {
     padding: 0px;
     margin: 0px;
 }
+.content {
+    margin: 10px 0 0 10px;
+}
 .post_wrapper {
     margin: 5px 0 0 20px;
     border-bottom: #D0D0D0 solid 1px;
@@ -32,7 +35,7 @@ body {
 }
 nav {
     position: fixed;
-    top: 110px;
+    top: 130px;
     right: 50px;
 }
 header {
@@ -67,7 +70,66 @@ textarea {
 label {
     margin-right: 10px;
 }
-
+.dialogs>label {
+    font-size: smaller;
+}
+.dialogs>input {
+    padding: 5px;
+}
 .form_row {
     margin-bottom: 5px;
+}
+#log_tab_wrapper {
+    text-align: right;
+
+    background: darkgrey;
+    color: #4F5155;
+    padding: 3px 50px 3px 3px;
+}
+span.pause {
+    margin: 0 5px 0 5px;
+}
+div#logged_menu {
+    position: absolute;
+    top: 20px;
+    width: 100%;
+    
+}
+div#logged_menu>div {
+    position: relative;
+    width: 180px;
+    float: right;
+    z-index: 3;
+}
+div#logged_menu>div>ul {
+    padding: 0;
+    /*width: 60px; */
+    list-style-type: none;
+    margin: 0 0 16px 0;
+    display: none;
+}
+div#logged_menu>div>ul>li {
+    background: darkgray;
+    border-bottom: 1px #4F5155 solid;
+    padding: 3px 0 3px 10px;
+}
+span.menu {
+    cursor: pointer;
+}
+.dialogs {
+    display:none;
+}
+#log_tab_wrapper>a{
+    /*z-index: 2;*/
+}
+div.zaslepka {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 99;
+    background-color: #4F5155;
+    opacity: 0.4;
+    padding: 0;
+    display: none;
+    top:0;
 }
